--- a/Spring/DemoSpringProject/src/main/resources/templates/reservations.html
+++ b/Spring/DemoSpringProject/src/main/resources/templates/reservations.html
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Room Reservations</title>
+    <style>
+        th, td {
+            width:150px;
+            text-align:center;
+            padding:5px
+        }
+    </style>
 </head>
 <body>
-<h1>Room reservations</h1>
+<nav>
+    <a href="index.html">Home</a>
+</nav>
+<h1>Room reservations by date </h1>
+<br>
+<p>append URL with any date you want like : "?date=2020-01-01"</p>
+<br>
 <p>Room reservations table</p>
-<table>
+
+<table border="2">
     <tr>
         <td>Room</td>
         <td>Room No</td>
