added guestList service

--- a/Spring/DemoSpringProject/src/main/resources/templates/reservations.html
+++ b/Spring/DemoSpringProject/src/main/resources/templates/reservations.html
@@ -17,7 +17,7 @@
 </nav>
 <h1>Room reservations by date </h1>
 <br>
-<p>append URL with any date you want like : "?date=2020-01-01"</p>
+<p>append URL with any date, like : "?date=2020-01-01"</p>
 <br>
 <p>Room reservations table</p>
 
